<resources>
    <string name="app_name">Moviecatalog3</string>
    <string name="tv_movies">TV Movies</string>
    <string name="movies">Movies</string>
    <string name="title">Title</string>
    <string name="date">10 January 2019</string>
    <string name="description">Description</string>
    <string name="bahasa">Bahasa</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="image_content">Image</string>
    <string name="overview">Overview</string>
    <string name="refresh">Refresh</string>
    <string name="Favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="des1">Reminder showing the movie that released today</string>
    <string name="des2">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="reminder_for_return_to_app">Reminder for return to app</string>
    <string name="message">Catalog Movie Missing You</string>
    <string-array name="title_tab">
        <item>Movie Favorite</item>
        <item>Movie TV Favorite</item>
    </string-array>
    <string name="unlike">Unlike</string>
    <string name="like">Like</string>
    <string name="widget_favorite_app">Widget Favorite App</string>
</resources>
