<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_content"
            android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal"
        android:layout_marginLeft="@dimen/horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/horizontal"
        android:layout_marginRight="@dimen/horizontal"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal"
        android:layout_marginLeft="@dimen/horizontal"
        android:layout_marginTop="@dimen/vertical"
        android:layout_marginEnd="@dimen/horizontal"
        android:layout_marginRight="@dimen/horizontal"
        android:layout_marginBottom="@dimen/horizontal"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSuka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal"
        android:layout_marginLeft="@dimen/horizontal"
        android:layout_marginTop="@dimen/vertical"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/txt_date">

        <TextView
            android:id="@+id/txt_ket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/like"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal"
        android:layout_marginTop="@dimen/vertical"
        android:layout_marginRight="@dimen/horizontal"
        android:text="@string/overview"
        android:textSize="@dimen/overviewtext"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1.2dp"
        android:layout_marginLeft="@dimen/horizontal"
        android:layout_marginTop="@dimen/vertical"
        android:layout_marginRight="@dimen/horizontal"
        android:background="#919090"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="380dp"
        android:layout_height="177dp"
        android:layout_marginLeft="@dimen/horizontal"
        android:layout_marginTop="@dimen/vertical"
        android:layout_marginRight="@dimen/horizontal"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.063" />


</androidx.constraintlayout.widget.ConstraintLayout>